--- a/index.html
+++ b/index.html
@@ -1,6 +1,104 @@
+<!DOCTYPE html>
 <html>
-<head></head>
+<head>
+<title>Work Dash</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata">
+<style>
+body, html {
+  height: 100%;
+  font-family: "Inconsolata", sans-serif;
+}
+
+.bgimg {
+  background-position: center;
+  background-size: cover;
+  background-image: url("/w3images/coffeehouse.jpg");
+  min-height: 75%;
+}
+
+.menu {
+  display: none;
+}
+</style>
+</head>
 <body>
-<h1>Hello World!!</h1>
+
+<!-- Links (sit on top) -->
+<div class="w3-top">
+  <div class="w3-row w3-padding w3-black">
+    <div class="w3-col s3">
+      <a href="#" class="w3-button w3-block w3-black">HOME</a>
+    </div>
+    <div class="w3-col s3">
+      <a href="#about" class="w3-button w3-block w3-black">ABOUT</a>
+    </div>
+    <div class="w3-col s3">
+      <a href="#menu" class="w3-button w3-block w3-black">MENU</a>
+    </div>
+    <div class="w3-col s3">
+      <a href="#where" class="w3-button w3-block w3-black">WHERE</a>
+    </div>
+  </div>
+</div>
+
+ 
+
+<!-- Add a background color and large text to the whole page -->
+<div class="w3-sand w3-grayscale w3-large">
+
+<!-- About Container -->
+<div class="w3-container" id="about">
+  <div class="w3-content" style="max-width:700px">
+    <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">ABOUT THE WordDash</span></h5>
+    <p>WorkDash was founded in November 2016 by two guys from Brisbane, Darren and
+        Mike. Both Darren and Mike came from different backgrounds, but their vision
+        was the same. Both were craving an integrated service model that met the needs of their client’s digital footprint.</p>
+    <p>For many years they both had worked with various platforms, software systems and service providers. This was always costly, time consuming and most of which, were not suitable or compatible with current business requirements or each other.</p>
+    <div class="w3-panel w3-leftbar w3-light-grey">
+      <p><i>WorkDash has the solution to the modern business problems. Whether you need professional business consulting, IT services or marketing, our experienced team is here to help you..</i></p>
+      
+    </div>
+    <!-- <img src="Users/diyaa/Desktop/Capture_workdash.jpg" style="width:100%;max-width:1000px" class="w3-margin-top">
+    <img src="\Users\diyaa\Desktop\Capture_workdash.jpg" style="width:100%;max-width:1000px" class="w3-margin-top">
+
+    <img src="/Users/diyaa/Desktop/Capture_workdash.jpg" alt="Trulli" width="500" height="333"> -->
+
+    <p><strong>Opening hours:</strong> Saturday to Sunday from 9am to 5pm.</p>
+    <p><strong>Address:</strong> T203, 1642 Anzac Avenue, North Lakes Qld 4509</p>
+  </div>
+</div>
+
+ 
+
+<!-- End page content -->
+</div>
+
+<!-- Footer -->
+<footer class="w3-center w3-light-grey w3-padding-48 w3-large">
+  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">WorkDash</a></p>
+</footer>
+
+<script>
+// Tabbed Menu
+function openMenu(evt, menuName) {
+  var i, x, tablinks;
+  x = document.getElementsByClassName("menu");
+  for (i = 0; i < x.length; i++) {
+    x[i].style.display = "none";
+  }
+  tablinks = document.getElementsByClassName("tablink");
+  for (i = 0; i < x.length; i++) {
+    tablinks[i].className = tablinks[i].className.replace(" w3-dark-grey", "");
+  }
+  document.getElementById(menuName).style.display = "block";
+  evt.currentTarget.firstElementChild.className += " w3-dark-grey";
+}
+document.getElementById("myLink").click();
+</script>
+
 </body>
-<html>
+</html>
+
